fix for bug 130095 - don't use unicode character conversion in the standalone xpinstaller - causes a crash. r=cathleen, sr=dveditz, a=asa